# LibraryLens

./: .gitignore  .pre-commit-config.yaml
.github/: dependabot.yml
api/: .env.example  pyproject.toml
api/app/: config.py  main.py
api/app/core/: config.py  db.py
api/app/models/: movie.py
api/app/routers/: books.py  dependencies.py  main.py  movies.py
api/app/routers/routes/: movies.py  tv_shows.py
api/app/schemas/: media.py  movie.py
iOS/LibraryLens/LibraryLens.xcodeproj/: project.pbxproj
iOS/LibraryLens/LibraryLens.xcodeproj/project.xcworkspace/xcuserdata/cyril.xcuserdatad/: UserInterfaceState.xcuserstate
iOS/LibraryLens/LibraryLens.xcodeproj/xcuserdata/cyril.xcuserdatad/xcschemes/: xcschememanagement.plist
iOS/LibraryLens/LibraryLens/App/: ContentView.swift  LibraryLensApp.swift
iOS/LibraryLens/LibraryLens/Features/Movie/Models/: MovieModel.swift
iOS/LibraryLens/LibraryLens/Features/Movie/Views/: MovieView.swift
iOS/LibraryLens/LibraryLens/Features/Movie/ViewsModel/: MovieViewModel.swift
iOS/LibraryLens/LibraryLensTests/: LibraryLensTests.swift
iOS/LibraryLens/LibraryLensUITests/: LibraryLensUITests.swift  LibraryLensUITestsLaunchTests.swift
